# clickhouse_from_scratch

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
base/base/: DNSResolver.cpp  DNSResolver.h  DateLUT.cpp  DateLUT.h  LineReader.cpp  ReplxxLineReader.cpp  extended_types.h  getResource.cpp  logger_useful.h
base/daemon/: BaseDaemon.cpp  BaseDaemon.h
base/loggers/: ExtendedLogChannel.cpp  Loggers.cpp  Loggers.h  OwnPatternFormatter.cpp  OwnSplitChannel.cpp  OwnSplitChannel.h
cmake/: llvm.cmake  zstd.cmake
cmake/find/: nuraft.cmake  xz.cmake
contrib/: CMakeLists.txt
contrib/abseil-cpp-cmake/: CMakeLists.txt
contrib/boost-cmake/: CMakeLists.txt
contrib/boringssl-cmake/: CMakeLists.txt
contrib/brotli-cmake/: CMakeLists.txt
contrib/bzip2-cmake/: CMakeLists.txt
contrib/curl-cmake/: CMakeLists.txt
contrib/lz4-cmake/: CMakeLists.txt
contrib/nuraft-cmake/: CMakeLists.txt
contrib/poco-cmake/: CMakeLists.txt
contrib/re2-cmake/: CMakeLists.txt
contrib/sentry-native-cmake/: CMakeLists.txt
contrib/zstd-cmake/: CMakeLists.txt
poco_build/lib/: libPocoActiveRecord.so.93  libPocoDataMySQL.so.93  libPocoEncodings.so.93  libPocoJWT.so.93  libPocoPrometheus.so.93  libPocoRedis.so.93
programs/: main.cpp
programs/client/: Client.cpp  Client.h
programs/keeper/: Keeper.cpp  keeper_config-preprocessed.xml  keeper_config.xml  keeper_config2.xml  keeper_config3.xml
programs/server/: Server.cpp  Server.cpp.bk  Server.h  config.xml
src/Client/: ClientBase.cpp  ClientBase.h  Connection.cpp  Connection.h  ConnectionEstablisher.cpp  ConnectionEstablisher.h  ConnectionPoolWithFailover.h  IServerConnection.h  Suggest.cpp  Suggest.h
src/Columns/: Collator.cpp  ColumnArray.cpp  ColumnArray.h  ColumnCompressed.h  ColumnConst.h  ColumnDecimal.cpp  ColumnDecimal.h  ColumnFixedString.cpp  ColumnFixedString.h  ColumnFunction.cpp  ColumnFunction.h  ColumnLowCardinality.cpp  ColumnLowCardinality.h  ColumnMap.cpp  ColumnMap.h  ColumnNullable.cpp  ColumnNullable.h  ColumnString.cpp  ColumnString.h  ColumnTuple.cpp  ColumnTuple.h  ColumnVector.cpp  ColumnVector.h  IColumn.h  IColumnDummy.h  IColumnUnique.h
src/Common/: Allocator.h  AllocatorWithMemoryTracking.h  CurrentThread.cpp  CurrentThread.h  Exception.cpp  Exception.h  NamePrompter.h  OpenTelemetryTraceContext.h  PODArray.h  ProcfsMetricsProvider.cpp  ProcfsMetricsProvider.h  ProfileEvents.cpp  ProgressIndication.cpp  StackTrace.cpp  TaskStatsInfoGetter.h  ThreadPool.cpp.bk  ThreadPool.h  ThreadProfileEvents.h  ThreadStatus.cpp  ThreadStatus.h  TraceCollector.cpp  TraceCollector.h
src/Common/Config/: ConfigProcessor.cpp  ConfigReloader.cpp  ConfigReloader.h
src/Compression/: CompressedWriteBuffer.cpp  CompressionCodecLZ4.cpp  CompressionFactory.cpp  CompressionFactoryAdditions.cpp  ICompressionCodec.cpp  ICompressionCodec.h
src/Coordination/: LoggerWrapper.h  WriteBufferFromNuraftBuffer.h
src/Core/: BackgroundSchedulePool.cpp  BaseSettings.cpp  BaseSettings.h  Defines.h  Field.cpp  MyBlank.h  ServerUUID.cpp  Settings.cpp  Settings.h  SettingsEnums.cpp  SettingsEnums.h  SettingsFields.cpp  SettingsFields.h  iostream_debug_helpers.cpp  iostream_debug_helpers.h
src/DataTypes/: DataTypeEnum.cpp  DataTypeFactory.cpp  DataTypeFactory.h  EnumValues.cpp  EnumValues.h  IDataType.h
src/DataTypes/Serializations/: ISerialization.cpp  SerializationDateTime.cpp  SerializationDateTime64.cpp
src/Disks/: IDisk.h  registerDisks.cpp
src/Formats/: FormatFactory.cpp  FormatFactory.h  NativeReader.cpp  NativeReader.h  NativeWriter.cpp  NativeWriter.h  registerFormats.cpp
src/IO/: BrotliWriteBuffer.cpp  BufferWithOwnMemory.h  Bzip2WriteBuffer.cpp  CompressionMethod.cpp  DoubleConverter.h  LZMADeflatingWriteBuffer.cpp  Lz4DeflatingWriteBuffer.cpp  OpenedFile.cpp  OpenedFile.h  OpenedFileCache.h  PeekableReadBuffer.h  ReadBufferFromFile.cpp  ReadBufferFromFile.h  ReadBufferFromFileDescriptor.cpp  ReadBufferFromFileDescriptor.h  ReadBufferFromPocoSocket.cpp  ReadHelpers.cpp  ReadHelpers.h  ReadSettings.h  TimeoutSetter.cpp  WriteBufferFromFile.cpp  WriteBufferFromFile.h  WriteBufferFromFileDescriptor.cpp  WriteBufferFromFileDescriptorDiscardOnFailure.cpp  WriteBufferFromPocoSocket.cpp  WriteBufferFromVector.h  WriteHelpers.h  ZstdDeflatingAppendableWriteBuffer.cpp  ZstdDeflatingWriteBuffer.cpp
src/Interpreters/: Context.cpp  Context.h  DNSCacheUpdater.cpp  DatabaseAndTableWithAlias.cpp  IdentifierSemantic.cpp  IdentifierSemantic.h  InterpreterFactory.cpp.bk  OpenTelemetrySpanLog.cpp  OpenTelemetrySpanLog.h  Session.cpp  Session.h  StorageID.cpp  StorageID.h  ZooKeeperLog.cpp  ZooKeeperLog.h  executeQuery.cpp  executeQuery.h  getTableExpressions.cpp
src/Parsers/: ASTCreateQuery.cpp  ASTCreateQuery.h  ASTFunction.cpp  ASTFunction.h  ASTIdentifier.cpp.bk  ASTIdentifier.h  DumpASTNode.h  ExpressionElementParsers.cpp  ParserCreateQuery.cpp  ParserExplainQuery.cpp  ParserQuery.cpp  ParserQueryWithOutput.cpp  ParserQueryWithOutput.cpp.bk  ParserSelectQuery.cpp  ParserShowTablesQuery.cpp  parseIdentifierOrStringLiteral.cpp  parseQuery.cpp
src/Server/: IServer.h  ProtocolServerAdapter.cpp  ProtocolServerAdapter.h  TCPHandler.cpp  TCPHandler.h  TCPHandlerFactory.h  TCPHandlerFactory.h.bk
test/connection/: connect.py
